WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120335
[Windows] some track language tags are not recognized
https://bugs.webkit.org/show_bug.cgi?id=120335
Summary
[Windows] some track language tags are not recognized
Brent Fulgham
Reported
2013-08-26 17:32:59 PDT
Port the Mac-only changes from
Bug 119643
(landed in
https://trac.webkit.org/r154527
) to Windows. Specifically: If a movie's language code is stored as a QuickTime 5-bit packed code there aren't enough bits for a full RFC 4646 language tag. The AVFoundation API we use returns NULL in this case, so we have to try another to see if we can get the ISO 639-2/T language code.
Attachments
Patch
(2.54 KB, patch)
2013-08-26 17:37 PDT
,
Brent Fulgham
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2013-08-26 17:33:25 PDT
<
rdar://problem/14836284
>
Brent Fulgham
Comment 2
2013-08-26 17:37:16 PDT
Created
attachment 209697
[details]
Patch
WebKit Commit Bot
Comment 3
2013-08-26 17:38:29 PDT
Attachment 209697
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp']" exit_code: 1 Source/WebCore/platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:1113: Use 0 or null instead of NULL (even in *comments*). [readability/null] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4
2013-08-26 17:49:15 PDT
Comment on
attachment 209697
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209697&action=review
> Source/WebCore/platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:928 > if (!primaryAudioTrackLanguage.isNull() && primaryAudioTrackLanguage != languageOfPrimaryAudioTrack()) > player()->characteristicChanged();
This should be: if (primaryAudioTrackLanguage != languageOfPrimaryAudioTrack()) characteristicsChanged();
>> Source/WebCore/platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:1113 >> + // RFC 4646 language tag so extendedLanguageTag returns NULL. In this case languageCode will return the > > Use 0 or null instead of NULL (even in *comments*). [readability/null] [4]
StyleQueue fail :-O
Brent Fulgham
Comment 5
2013-08-27 08:54:25 PDT
Committed
r154693
: <
http://trac.webkit.org/changeset/154693
>
Brent Fulgham
Comment 6
2013-08-27 09:01:18 PDT
Minor correction made in
r154694
: <
http://trac.webkit.org/changeset/154694
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug