[Windows] some track language tags are not recognized https://bugs.webkit.org/show_bug.cgi?id=120335

Reviewed by Eric Carlson.

* platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp: Revise implementation
to match logic in platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjc.mm


Canonical link: https://commits.webkit.org/138338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154693 268f45cc-cd09-0410-ab3c-d52691b4dbfc